--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "numpy>=2.4.1",
+    "orjson>=3.11.7",
     "pyqtgraph>=0.14.0",
     "pyside6>=6.10.1",
     "types-gdb>=16.3.0.20260109",
